<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:eegeo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wrld.com.wrldtest.MainActivity">

    <com.eegeo.mapapi.MapView
        android:id="@+id/m_mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        eegeo:camera_target_latitude="37.769868"
        eegeo:camera_target_longitude="-122.466106"
        eegeo:camera_zoom="17" />

    <Button
        android:id="@+id/golden_gate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onGoldenGate"
        android:text="@string/golden_gate_screen"/>


    <RelativeLayout
        android:id="@+id/topfloor_indoor_buttons"
        android:layout_width="fill_parent"
        android:visibility="gone"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/topfloor_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onTopFloor"
            android:text="@string/topfloor_button_label"/>

        <Button
            android:id="@+id/moveup_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topfloor_indoor_button"
            android:enabled="false"
            android:onClick="onMoveUp"
            android:text="@string/moveup_button_label"/>

        <Button
            android:id="@+id/movedown_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moveup_indoor_button"
            android:enabled="false"
            android:onClick="onMoveDown"
            android:text="@string/movedown_button_label"/>

        <Button
            android:id="@+id/bottomfloor_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movedown_indoor_button"
            android:enabled="false"
            android:onClick="onBottomFloor"
            android:text="@string/bottomfloor_button_label"/>

        <Button
            android:id="@+id/move_floor_exit_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottomfloor_indoor_button"
            android:enabled="false"
            android:onClick="onExit"
            android:text="@string/exit_button_label"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
